todo app with backend api's for getting and adding lists and tasks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,10 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "auth" : ["./src/auth"],
+      "typesPath" : ["./src/types/types"],
+      "prismaClientPath": ["./prisma/client"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
