--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.1",
     "@prisma/client": "^5.16.1",
+    "@prisma/extension-accelerate": "^1.1.0",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "jose": "^5.6.2",
@@ -38,5 +39,5 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
- "type": "module"
+  "type": "module"
 }
