replaced auth v5 with v4 signin and sign out working

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
-      "auth" : ["./src/auth"],
+      // "auth" : ["./src/auth"],
       "typesPath" : ["./src/types/types"],
       "prismaClientPath": ["./prisma/client"]
     }
