--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "axios": "^1.7.2",
     "jose": "^5.6.2",
     "next": "14.2.4",
-    "next-auth": "^5.0.0-beta.19",
+    "next-auth": "^4.24.7",
     "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
