--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/extension-accelerate": "^1.1.0",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
+    "clsx": "^2.1.1",
     "jose": "^5.6.2",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
